--- a/Desafio 1 compononente QR-code/index.htm
+++ b/Desafio 1 compononente QR-code/index.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="PT-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,10 +19,11 @@
                     <img src="img/image-qr-code.png" alt="QR-Code">
                 </div>
 
-                <h1>Melhore suas habilidades de front-end criando projetos</h1>
+                <h1>
+                    Improve your front-end skills by building projects
+                </h1>
                 <p>
-                    digitalize o código QR para visitar o mentor de front-end e leve
-                    suas habilidades de codificação para o próximo nível.
+                    Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
                 </p>
             </div>
 
